# dbt-autoloader

./: README.md  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: cd_deploy_wheel_and_terraform.yml  cd_deployment_pipeline.yml  ci_config_validation.yml  ci_pr_az_devops_linker.yml  ci_pre_commit.yml  ci_terrafom_plan.yml  ci_unit_test_sonarqube_code_quality.yml  ci_upgrade_packages.yml
.github/workflows/scripts/: cleanup_workspace.py  config_validation.py  deploy_new_version.py  get_access_token.py  get_latest_deployed_version.py  start_dbx_workflow.py
.github/workflows/scripts/helpers/: wheel.py
.github/workflows/scripts/validation_schema/: databricks_job_validation_schema.py  source_validation_schema.py
config/dev/: configs.json  databricks_job.yml
config/tst/: configs.json  databricks_job.yml
edp_auto_loader/: orchestrate_load.py
edp_auto_loader/config/: source_aecorsoft.yml  source_bw.yml  source_hana.yml
edp_auto_loader/core/: config.py  edp_auto_loader.py
edp_auto_loader/core/helpers/: adls.py  delta_table_properties.py  logger.py  spark_init.py  storage_config.py  utils.py
edp_auto_loader/core/test/: conftest.py  utils_test.py
edp_auto_loader/core/test/fixtures/: auto_loader.yml
terraform/: README.md  databricks_auto_loader_job.tf  databricks_secret_scope.tf  providers.tf  variables.tf
utils/: __init__.py  check_virtual_environment.py  upgrade_requirements.py
utils/tests/: conftest.py  upgrade_requirements_test.py
(+7 files in other folders)
