[metadata]
name = edp_auto_loader
author = SITI-PTIY/FPD
url = https://github.com/sede-x/Template-EDP-Auto-Loader
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Auto Loader, Databricks, EDP, Shell

[options]
packages = find:
install_requires =
	PyYAML >= 6.0.1
zip_safe = True

[options.package_data]
edp_auto_loader = config/*.yml

[options.entry_points]
console_scripts =
	run = edp_auto_loader.orchestrate_load:run
